--- a/css/index.css
+++ b/css/index.css
@@ -272,15 +272,20 @@ html,body{
 	width: 100%;
 	height: 100%;
 	margin-top: 4.5rem;
-	background-color: pink;
 	position: absolute;
 	left: calc(0);
 	overflow-x: hidden;
+	-webkit-overflow-scrolling : touch;
 	
+}
+.videos::-webkit-scrollbar{
+    display: none;
 }
 .video-demo{
 	width: 100%;
 	height: auto;
+	position: relative;
+	margin-bottom: .5rem;
 }
 .video-demo>img{
 	width: 100%;
@@ -299,9 +304,56 @@ html,body{
 	width: 100%;
 	height: auto;
 }
-.imgset img{
+.imgset>img{
 	width:100%;
 }
 .swiper-pagination-bullet-active{
 	background-color: rgb(212,60,51) !important;
 } 
+.img-imformation{
+	width: 100%;
+	height: 1.5rem;
+	position: absolute;
+	bottom: 0;
+	background-color: rgba(0,0,0,0.8);
+	color: white;
+}
+.img-head-infomation{
+	position: absolute;
+	width: 100%;
+	height: 1.5rem;
+	color: white;
+}
+.head-image{
+	height: 100%;
+	width: auto;
+	float: left;
+	line-height: 1.5rem;
+	position: relative;
+}
+.head-image>img{
+	display: inline-block;
+	height: 1rem;
+	width: 1rem;
+	border-radius: .5rem;
+	margin-left: 1rem;
+}
+.head-image>span{
+	display: inline-block;
+	font-size: 0.6rem;
+	margin-left: .5rem;
+	color: white;
+}
+.video-class{
+	width: auto;
+	height: 1rem;
+	line-height: 1rem;
+	font-size: 0.6rem;
+	float: right;
+	margin-right: 1rem;
+	margin-top: .25rem;
+	border: 1px solid white;
+	padding-left: 1rem;
+	padding-right: 1rem;
+	border-radius: .6rem;
+}
